# youtube-analytics-project

./: pyproject.toml
src/: channel.py
test_channel/: test_channel.py
