[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["danilabasov <danilabasov98@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
google-api-python-client = "^2.88.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
